--- a/app/src/main/res/layout/fragment_tab3.xml
+++ b/app/src/main/res/layout/fragment_tab3.xml
@@ -25,6 +25,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1.8"
+                    android:id="@+id/stats_rl"
                     android:background="@color/white"
                     android:padding="8dp">
                     <RelativeLayout
