--- a/app/src/main/res/layout/activity_code_lab.xml
+++ b/app/src/main/res/layout/activity_code_lab.xml
@@ -65,7 +65,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true">
 
-            <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
+            <!--<net.i2p.android.ext.floatingactionbutton.FloatingActionButton
                 android:id="@+id/action_a"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -73,7 +73,7 @@
                 fab:fab_title="Stack"
                 fab:fab_icon="@drawable/ic_library"
                 fab:fab_colorNormal="?attr/colorPrimary"
-                fab:fab_colorPressed="?attr/colorPrimaryDark"/>
+                fab:fab_colorPressed="?attr/colorPrimaryDark"/>-->
 
             <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
                 android:id="@+id/create_deck"
@@ -87,7 +87,7 @@
                 fab:fab_colorPressed="?attr/colorPrimaryDark" />
 
             <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
-                android:id="@+id/action_b"
+                android:id="@+id/create_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 fab:fab_size="mini"
