--- a/app/src/main/res/layout/activity_play_deck.xml
+++ b/app/src/main/res/layout/activity_play_deck.xml
@@ -47,6 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@+id/separator"
+                android:padding="8dp"
                 android:gravity="center"
                 >
                 <TextView
@@ -82,6 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@+id/separator"
+                android:padding="8dp"
                 android:gravity="center"
                 >
                 <TextView
