--- a/app/src/main/res/layout/activity_deck.xml
+++ b/app/src/main/res/layout/activity_deck.xml
@@ -127,7 +127,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/deck_sub_mode"
-                android:text="Normal"
+                android:text="Spaced learning"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:gravity="center"
@@ -137,8 +137,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/due_today"
-                android:text="Due today:"
+                android:text="Due today"
                 android:gravity="left"
+                android:layout_marginTop="22dp"
                 android:layout_below="@+id/deck_sub_mode"
                 />
             <TextView
@@ -147,12 +148,13 @@
                 android:id="@+id/due_today_stats"
                 android:layout_below="@+id/deck_sub_mode"
                 android:gravity="right"
-                android:text="20 1 19"/>
+                android:layout_marginTop="22dp"
+                android:text="20"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/total_new_cards"
-                android:text="Total new cards:"
+                android:text="New cards"
                 android:gravity="left"
                 android:layout_below="@+id/due_today"
                 />
@@ -162,12 +164,12 @@
                 android:id="@+id/total_new_cards_stats"
                 android:layout_below="@+id/due_today"
                 android:gravity="right"
-                android:text="45"/>
+                android:text="15"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/total_cards"
-                android:text="Total cards:"
+                android:text="Restudied cards"
                 android:gravity="left"
                 android:layout_below="@+id/total_new_cards"
                 />
@@ -177,12 +179,12 @@
                 android:id="@+id/total_cards_stats"
                 android:layout_below="@+id/total_new_cards"
                 android:gravity="right"
-                android:text="122"/>
+                android:text="5"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/estimated_time"
-                android:text="Estimated time:"
+                android:text="Estimated time (min)"
                 android:gravity="left"
                 android:layout_below="@+id/total_cards"
                 />
@@ -192,16 +194,21 @@
                 android:id="@+id/estimated_time_stats"
                 android:layout_below="@+id/total_cards"
                 android:gravity="right"
-                android:text="10 min"/>
+                android:text="17 min"/>
         </RelativeLayout>
         <TextView
-            android:id="@+id/play_mode_description"
+            android:id="@+id/play_mode_description1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="56dp"
-            android:gravity="center_horizontal"
             android:layout_below="@+id/deck_stats"
-            android:text="PlayMode flavor text here"/>
+            android:text="Spaced learning offers a great strategy for memorising a set of cards with long term results in mind."/>
+        <TextView
+            android:id="@+id/play_mode_description2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/play_mode_description1"
+            android:text="Used daily it guarantees that it'll keep memorised what you learn."/>
     </RelativeLayout>
     <View
         android:layout_width="fill_parent"
@@ -218,6 +225,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@drawable/white_button"
+        android:stateListAnimator="@null"
         android:text="Play"
         android:onClick="onClick"
         android:textStyle="bold"
