--- a/app/src/main/res/menu/menu_code_lab.xml
+++ b/app/src/main/res/menu/menu_code_lab.xml
@@ -2,9 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.raulvintila.app.lieflashcards.Activities.MainActivity">
-    <item android:id="@+id/action_settings1" android:title="@string/action_settings"
+    <!--<item android:id="@+id/action_settings1" android:title="@string/action_settings"
         android:icon="@drawable/ic_action_location_found_dark"
-        android:orderInCategory="100" app:showAsAction="never" />
+        android:orderInCategory="100" app:showAsAction="never" />-->
     <item android:id="@+id/action_sync" android:title="Sync"
         android:icon="@drawable/ic_sync_white_24dp"
         android:orderInCategory="100" app:showAsAction="ifRoom" />
