--- a/app/src/main/res/menu/menu_play_deck.xml
+++ b/app/src/main/res/menu/menu_play_deck.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.raulvintila.app.lieflashcards.Activities.PlayDeckActivity">
     <item android:id="@+id/action_swap" android:title="Swap" android:icon="@drawable/ic_swap_horiz_white_24dp"
-          app:showAsAction="always" />
+          app:showAsAction="always" android:visible="false"/>
     <item android:id="@+id/action_clear_whiteboard" android:title="Clear Whiteobard" android:icon="@drawable/ic_format_paint_white_24dp"
         app:showAsAction="never" android:visible="false"/>
     <item android:id="@+id/action_whiteboard"
